Company index view now done- some aligning issues but this is good enough for now 👍

--- a/app/assets/stylesheets/custom_styles/simple-calendar.scss
+++ b/app/assets/stylesheets/custom_styles/simple-calendar.scss
@@ -1,6 +1,18 @@
 .simple-calendar {
     // .day {;
     // }
+    table {
+        border: 1px solid whitesmoke;
+        border-radius: 5px;
+    }
+
+    div.calendar-heading {
+        margin-bottom: 12px !important;
+    }
+
+    div.calendar-heading a {
+        color: #85bc4b;
+    }
   
     .wday-0 {
         width: 7rem;
